A bunch of bug fixes.

--- a/sections/b.main/2.background/2.owl.tex
+++ b/sections/b.main/2.background/2.owl.tex
@@ -1,10 +1,10 @@
 
 % Explain what the Web Ontology Language (OWL) is
-Description logics are also the basis of the \emph{Web Ontology Language} (OWL) \cite{hitzler2012primer,motik2012ontology}, which is a World Wide Web Consortium (W3C) recommendation and is intended for use as part of the semantic web. While the OWL 2 DL language is based on $\SROIQ$, OWL 2 also defines three so-called profiles that are fragments of the full OWL 2 language that trade-off expressive power for more efficient reasoning \cite{motik2012profiles,motik2012ontology}. OWL 2 EL is a subset based on the DL $\mathcal{EL}^{++}$ and allows the basic reasoning task to be performed in polynomial time. This fragment is useful for ontologies with many classes and properties. OWL 2 QL is designed for applications with many instances where query answering is an important task. OWL 2 RL is designed such that reasoning tasks can be implemented using a rule-based reasoning engine. The OWL 2 DL profile, which is the most expressive of the profiles that is still decidable\footnote{The most expressive profile, OWL 2 Full, is not decidable.}, is based on $\SROIQ$. This thesis, therefore, focuses on OWL 2 DL.
+Description logics are also the basis of the \emph{Web Ontology Language} (OWL) \cite{hitzler2012primer,motik2012ontology}, which is a World Wide Web Consortium (W3C) recommendation and is intended for use as part of the semantic web. While the OWL 2 DL language is based on $\SROIQ$, OWL 2 also defines three so-called profiles that are fragments of the full OWL 2 language and trade-off expressive power for more efficient reasoning \cite{motik2012profiles,motik2012ontology}. OWL 2 EL is a subset based on the DL $\mathcal{EL}^{++}$ and allows the basic reasoning task to be performed in polynomial time. This fragment is useful for ontologies with many classes and properties. OWL 2 QL is designed for applications with many instances where query answering is an important task. OWL 2 RL is designed such that reasoning tasks can be implemented using a rule-based reasoning engine. The OWL 2 DL profile, which is the most expressive of the profiles that is still decidable\footnote{The most expressive profile, OWL 2 Full, is not decidable.}, is based on $\SROIQ$. This thesis, therefore, focuses on OWL 2 DL.
 
 It is important to note that while OWL 2 is based on DLs like \SROIQ, it provides many more axiom and concept expression types than are natively available in \SROIQ. It provides, for example, axioms that allow specifying disjointness between concepts, or ones that allow the description of equivalent roles. These additional axioms do, however, not make the language more expressive, as all of them can equivalently be expressed using one or more \SROIQ axioms. In contrast, OWL 2 DL also provides some features that can not be reproduced in pure \SROIQ, e.g., annotations, data types and data properties. For the rest of this thesis, these will not be considered, and they have been removed from the ontologies used in the evaluation, as will be explained in further detail in \cref{evaluation}.
 
-In addition to the different profiles, there exist also different syntaxes for OWL 2. The syntax defined and used by the main specification \cite{motik2012ontology} is the so-called functional syntax. An alternative ontology format supporting OWL 2 is the XML/RDF-based format \cite{beckett2004rdf,motik2009rdf}, which is the main format used for exchanging ontologies between different tools. It is the only format whose support is mandated for compliant tools by the specification. The XML version of the RDF format is not designed to be presented and manipulated directly by human users, but is suitable for machine processing and interoperability. The RDF format can also be used for other forms of data and can be written in an alternative non-XML syntax that is more human-readable called Turtle \cite{beckett2008turtle}. Another popular format for OWL 2 is the Manchester syntax \cite{horridge2009manchester}, which is also the default used in the popular ontology development tool Protégé (see below).
+In addition to the different profiles, there exist also different syntaxes for OWL 2. The syntax defined and used by the main specification \cite{motik2012ontology} is the so-called functional syntax. An alternative ontology format supporting OWL 2 is the XML/RDF-based format \cite{beckett2004rdf,motik2009rdf}, which is the main format used for exchanging ontologies between different tools. It is the only format whose support is mandated for compliant tools by the specification. The XML version of the RDF format is not designed to be presented to and manipulated directly by human users, but is suitable for machine processing and interoperability. The RDF format can also be used for other forms of data and can be written in an alternative non-XML syntax called Turtle \cite{beckett2008turtle} that is more human-readable. Another popular format for OWL 2 is the Manchester syntax \cite{horridge2009manchester}, which is also the default used in the popular ontology development tool Protégé (see below).
 
 Highly optimized reasoners exist for different OWL profiles. Reasoners are programs that, given an ontology, can perform certain reasoning tasks like checking for consistency of the ontology and testing whether axioms are entailed or not. Some reasoners specialize in the more restricted profiles, e.g., ELK \cite{kazakov2014elk} supports only the OWL 2 EL profile. Others, like the one used for this thesis, have complete or almost complete support for OWL 2 DL, and therefore also \SROIQ. For this thesis, as will be explained in more detail in \cref{implementation}, we are using the reasoners through the OWL API \cite{horridge2011owl}. The OWL API is a Java library that provides data structures and utilities to represent OWL 2 ontologies, load and store them to disk, and perform several basic transformations. Further, it provides a common way of interfacing with different reasoners to query consistency, entailment, and class hierarchies.
 
