--- a/sections/b.main/2.background/4.repair.tex
+++ b/sections/b.main/2.background/4.repair.tex
@@ -41,7 +41,7 @@ Generating a classical repair can be achieved in a number of equivalent ways. On
 
 Justifications are necessarily non-empty since $\Omc_s \not\models \alpha$, and therefore hitting sets and minimal hitting sets always exist. Given any minimal hitting set $H$ for the justification $J_1, \dots, J_n$ of $\alpha$ in $\Omc$, the ontology $\Omc' = \Omc \setminus H$ is an optimal classical repair of $\Omc$ with respect to $\alpha$.
 
-This algorithm for computing optimal classical repairs requires the computation of all justifications, which can in general be very computationally intensive. Black-box approaches for computing justifications have been proposed \cite{kalyanpur2007finding,schlobach2003non,schlobach2007debugging} that compute justifications by repeatedly making calls to pre-existing highly-optimized reasoners. These may, however, in the worst case, need to make an exponential number of calls to the reasoner. Nevertheless, in practice, they may often be fast enough. For example, the hitting-set-tree based algorithm presented in \cite{kalyanpur2007finding} can compute both all justifications and all hitting sets. There exist also glass-box approaches to computing justifications \cite{kalyanpur2007finding}, that require only a single reasoning request to find justifications, but they also require specialized, generally less efficient, reasoners.
+This algorithm for computing optimal classical repairs requires the computation of all justifications, which can in general be very computationally intensive. Black-box approaches for computing justifications have been proposed \cite{kalyanpur2007finding,schlobach2003non,schlobach2007debugging} that compute justifications by repeatedly making calls to pre-existing highly-optimized reasoners. To compute all justification, however, they may in the worst case, need to make an exponential number of calls to the reasoner. Nevertheless, in practice, they may often be fast enough. For example, the hitting-set-tree based algorithm presented in \cite{kalyanpur2007finding} can be used to compute both all justifications and all hitting sets. There exist also glass-box approaches to computing justifications \cite{kalyanpur2007finding}, that require only a single reasoning request to find justifications, but they also require specialized, generally less efficient, reasoners.
 
 An alternative to computing all justification is to directly find a minimal correction subset $C$ of $\Omc_r$ such that $\Omc \setminus C \not\models \alpha$. Finding a single such set can be done efficiently using similar algorithms to the ones for finding single justifications. Algorithms for solving the minimal subset over monotone predicate problem, such as the \textsc{QuickXplain} algorithm \cite{junker2004preferred} or a progression-based algorithm \cite{marques2013minimal} may be used. A subset of all such sets can be found efficiently using the \textsc{MergeXplain} algorithm \cite{shchekotykhin2015mergexplain}. Of course, computing all minimal correction subsets directly is also possible, using similar algorithms to the ones used for computing all justifications \cite{malouf2007maximal}.
 
@@ -55,7 +55,7 @@ While the classical approach is obviously sufficient to guarantee that a possibl
 
 Since, ideally, one wants to retain as much information as possible, alternative methods for repairing ontologies have been proposed that are able to preserve more information than the classical approach (e.g., \cite{du2014practical,AMAI-2018,baader2018making,troquard2018repairing,confalonieri2020towards,horridge2008laconic,lam2008fine}).
 
-One option is to first modify the original ontology and afterwards apply the classical repair approach. The intuition is that in the modified ontology the individual axioms should contain less information, and therefore, the removal of axioms leads to less information loss relative to doing the same in the unmodified ontology. In \cite{horridge2008laconic} the authors propose a structural transformation, that replaces axioms with a set of weaker axioms that are semantically equivalent, but on their own contain less information.
+One option is to first modify the original ontology and afterwards apply the classical repair approach. The intuition is that in the modified ontology the individual axioms should contain less information, and therefore, the removal of axioms lead to less information loss relative to doing the same in the unmodified ontology. In \cite{horridge2008laconic} the authors propose a structural transformation, that replaces axioms with a set of weaker axioms that are semantically equivalent, but on their own contain less information.
 
 \begin{example}
   Given the inconsistent ontology $\Omc = \{ A \sqsubseteq B \sqcap \lnot C, B \sqsubseteq C, A(a) \}$, we want to repair it such that it becomes consistent. To repair this ontology using a classical repair, we have to remove one of the three axioms. However, we can transform it into the equivalent ontology $\Omc' = \{ A \sqsubseteq B, A \sqsubseteq \lnot C, B \sqsubseteq C, A(a) \}$. Now, we have some additional possibilities. We could for example remove only the axiom $A \sqsubseteq \lnot C$ and retain the consequence $C(a)$ which would otherwise have always been lost.
