--- a/sections/b.main/3.theory/1.expressivity.tex
+++ b/sections/b.main/3.theory/1.expressivity.tex
@@ -1,5 +1,5 @@
 
-The main difficulties that arise when weakening axioms in \SROIQ ontologies, and especially when weakening RIAs, are related to ensuring that the constraints on the use of non-simple roles and the regularity of the RBox as a whole are maintained. In many logics, the union of two ontologies would be guaranteed to be another valid ontology. While this is the case for FOL theories or even \ALC ontologies, it is not true for \SROIQ ontologies. As mentioned in \cref{causes-of-bugs}, merging two \SROIQ ontologies may create an ontology that violates these constraints. While these restrictions help ensure the decidability of the logic, they also make \SROIQ more difficult to use. Not only must these problems be taken into account when authoring ontologies, but they must be carefully considered also when modifying them using automatic transformations, such as applying axiom weakening based repair algorithms. Replacing an axiom with another axiom, even if the new axiom is weaker, can cause the resulting ontology to violate one or more of the global constraints in \SROIQ. This may happen even if the new axiom on its own is valid, as can be seen in \cref{ex:bad-weakening} and \cref{ex:bad-weakening-2}.
+The main difficulties that arise when weakening axioms in \SROIQ ontologies, and especially when weakening RIAs, are related to ensuring that the constraints on the use of non-simple roles and the regularity of the RBox as a whole are maintained. In many logics, the union of two ontologies would be guaranteed to be another valid ontology. While this is the case for FOL theories or even \ALC ontologies, it is not true for \SROIQ ontologies. As mentioned in \cref{causes-of-bugs}, merging two \SROIQ ontologies may create an ontology that violates these constraints. While these restrictions help ensure the decidability of the logic, they also make \SROIQ more difficult to use. Not only must these complications be taken into account when authoring ontologies, but they must be carefully considered also when modifying them using automatic transformations, such as applying axiom weakening based repair algorithms. Replacing an axiom with another axiom, even if the new axiom is weaker, can cause the resulting ontology to violate one or more of the global constraints in \SROIQ. This may happen even if the new axiom on its own is valid, as can be seen in \cref{ex:bad-weakening} and \cref{ex:bad-weakening-2}.
 
 \begin{example} \label{ex:bad-weakening}
   Take the ontology $\Omc = \{ r \circ s \circ r \sqsubseteq t, r \sqsubseteq s, \top \sqsubseteq \forall t.\bot, \exists s.\self \sqsubseteq \top \}$. The extension of $t$ is empty in every model of this ontology. It follows that, ignoring the global constraints, the axiom $r \sqsubseteq s$ could be weakened to $t \sqsubseteq s$. This would, however, result in an ontology where $s$ is non-simple, which is not allowed since $s$ is used as part of a \self constraint.
@@ -22,5 +22,5 @@ For this reason, we give to the upward and downward cover as an argument not onl
 
 An alternative to always choosing simple roles is to define two versions of the covers, one which operators only over simple roles and one which uses also non-simple roles. Then in a context in which simple roles are required, the more restrictive cover is used, while in all other cases, the complete covers can be employed. While this variation has been implemented, it has not been evaluated and will not be further considered in the rest of the thesis.
 
-Another assumption made in \cite{confalonieri2020towards} is that the existential and universal roles are simple, and may therefore be included in the upward and downward covers. While this is not a significant restriction in theory, it contradicts the OWL 2 DL specification, which directly defines these roles to be non-simple in every ontology. Including the existential and universal roles in the covers, while augmenting the number of possible weakening, is not necessarily required. Therefore, this thesis will consider, as stated in \cref{sroiq-syntax}, the universal role to be non-simple. This allows the implementation of the proposed approach using existing highly-optimized reasoners designed for OWL 2 DL. It has to be considered, however, that removing the existential and universal role from the covers can prevent the weakening of RIAs, disjoint role axioms and role assertions to tautologies. Removal of axioms may be required if they are by themselves inconsistent, meaning that not being able to weaken them to tautologies could mean the repair algorithm never terminates. For this reason, the weakening operator for these axioms explicitly includes a tautological axiom. Note that for the case of positive and negative role assertions, the extension of the covers to include also non-simple roles would be an alternative solution. This is however not the case for disjoint role assertions, as the roles used in them must always be simple.
+Another assumption made in \cite{confalonieri2020towards} is that the existential and universal roles are simple, and may therefore be included in the upward and downward covers. While this is not a significant restriction in theory, it contradicts the OWL 2 DL specification, which directly defines these roles to be non-simple in every ontology. Including the existential and universal roles in the covers, while augmenting the number of possible weakening, is not necessarily required. Therefore, this thesis will consider, as stated in \cref{sroiq-syntax}, the universal role to be non-simple. This allows the implementation of the proposed approach using existing highly-optimized reasoners designed for OWL 2 DL. It has to be considered, however, that removing the existential and universal role from the covers can prevent the weakening of RIAs, disjoint role axioms and role assertions to tautologies. Removal of these axioms may be required if they are by themselves inconsistent, meaning that not being able to weaken them to tautologies could mean the repair algorithm never terminates. For this reason, the weakening operator for these axioms explicitly includes a tautological axiom. Note that for the case of positive and negative role assertions, the extension of the covers to include also non-simple roles would be an alternative solution. This is however not the case for disjoint role assertions, as the roles used in them must always be simple.
 
