--- a/sections/c.back/a.sroiq.tex
+++ b/sections/c.back/a.sroiq.tex
@@ -1,5 +1,5 @@
 
-We give a brief description of the DL \SROIQ; for full details, see \cite{horrocks2006even,Kazakov08,baader_horrocks_lutz_sattler_2017}. 
+We give a brief description of the DL \SROIQ; for full details, see \cite{horrocks2006even,Kazakov08,baader_horrocks_lutz_sattler_2017,rudolph2011foundations}. 
 
 \section{\texorpdfstring{$\SROIQ$}{SROIQ} Syntax} \label{sroiq-syntax-appendix}
 
