--- a/sections/b.main/2.background/1.sroiq.tex
+++ b/sections/b.main/2.background/1.sroiq.tex
@@ -1,9 +1,9 @@
 % Introduce what description logics are 
-Formally, an ontology is a set of statements expressed in an appropriate logical language and with the purpose of describing a specific domain of interest. While ontologies can be represented using several different formalisms, for use in automated reasoning a trade-off must be made between expressivity and practicality. For example, \emph{first-order logic} (FOL) is more expressive than propositional logic, but this added expressivity comes at the cost of decidability. In addition to decidability, scalability must also be considered in the choice and design of the used representation of the knowledge.
+Formally, an ontology is a set of statements expressed in an appropriate logical language and with the purpose of describing a specific domain of interest. While ontologies can be represented using several different formalisms, for use in automated reasoning a trade-off must be made between expressivity and practicality. For example, \emph{first-order logic} (FOL) is more expressive than propositional logic, but this added expressivity comes at the cost of decidability. In addition to decidability, scalability must also be considered in the choice and design of the used representation.
 
 \emph{Description logics} (DL) are often used for building ontologies. They include a family of related knowledge representation languages and are often fragments of FOL\footnote{While DLs are fragments of FOL in the sense that for every ontology in a given DL, there exists a FOL theory that has the same models, the syntax used by DLs is different from the syntax used in FOL, and as such a DL axiom is not a valid FOL sentence.} with equality, as is the case with the DL $\SROIQ$ which is the main focus of this work. DLs are almost always designed to be decidable and generally offer a favourable trade-off between expressivity and complexity of reasoning tasks. Different DLs have been developed for different applications and allow for varying levels of expressivity.
 
-This section will briefly introduce the DL $\SROIQ$ \cite{horrocks2006even, rudolph2011foundations, baader_horrocks_lutz_sattler_2017}. A more detailed description, including more explanations and examples, can be found in \cref{sroiq-appendix}.
+This section will briefly introduce the DL $\SROIQ$ \cite{horrocks2006even,rudolph2011foundations,baader_horrocks_lutz_sattler_2017}. A more detailed description, including more explanations and examples, can be found in \cref{sroiq-appendix}.
 
 \subsection{The Syntax of \SROIQ} \label{sroiq-syntax}
 
@@ -67,14 +67,14 @@ The semantics of \SROIQ is defined using \emph{interpretations} $I = \langle \De
 \end{align*} 
 \vspace{-9mm}
 \begin{align*}
-  (r^-)^I &= \{ \langle \gamma_2, \gamma_1 \rangle \mid \langle \gamma_1, \gamma_2 \rangle \in r^I \} \enspace, \\
-  (\forall R.C)^I &= \{ \gamma \in \Delta^I \mid \forall \gamma' \in \Delta^I : \langle \gamma, \gamma' \rangle \in R^I \implies \gamma' \in C^I \} \enspace, \\
-  (\exists R.C)^I &= \{ \gamma \in \Delta^I \mid \exists \gamma' \in \Delta^I : \langle \gamma, \gamma' \rangle \in R^I \text{ and } \gamma' \in C^I \} \enspace, \\
-  (\less n {R.C})^I &= \{ \gamma \in \Delta^I \mid \left| \{ \gamma' \in \Delta^I \mid \langle \gamma, \gamma' \rangle \in R^I \text{ and } \gamma' \in C^I \} \right| \leq n \} \enspace, \\
-  (\more n {R.C})^I &= \{ \gamma \in \Delta^I \mid \left| \{ \gamma' \in \Delta^I \mid \langle \gamma, \gamma' \rangle \in R^I \text{ and } \gamma' \in C^I \} \right| \geq n \} \enspace, \\
-  (\exists R.\self)^I &= \{ \gamma \in \Delta^I \mid \langle \gamma, \gamma \rangle \in R^I \} \enspace,
+  (r^-)^I &= \{ \langle \delta_2, \delta_1 \rangle \mid \langle \delta_1, \delta_2 \rangle \in r^I \} \enspace, \\
+  (\forall R.C)^I &= \{ \delta \in \Delta^I \mid \forall \delta' \in \Delta^I : \langle \delta, \delta' \rangle \in R^I \implies \delta' \in C^I \} \enspace, \\
+  (\exists R.C)^I &= \{ \delta \in \Delta^I \mid \exists \delta' \in \Delta^I : \langle \delta, \delta' \rangle \in R^I \text{ and } \delta' \in C^I \} \enspace, \\
+  (\less n {R.C})^I &= \{ \delta \in \Delta^I \mid \left| \{ \delta' \in \Delta^I \mid \langle \delta, \delta' \rangle \in R^I \text{ and } \delta' \in C^I \} \right| \leq n \} \enspace, \\
+  (\more n {R.C})^I &= \{ \delta \in \Delta^I \mid \left| \{ \delta' \in \Delta^I \mid \langle \delta, \delta' \rangle \in R^I \text{ and } \delta' \in C^I \} \right| \geq n \} \enspace, \\
+  (\exists R.\self)^I &= \{ \delta \in \Delta^I \mid \langle \delta, \delta \rangle \in R^I \} \enspace,
 \end{align*}
-where $|X|$ is the cardinality of a set $X$.
+where $|X|$ denotes the cardinality of a set $X$.
 An interpretation $I$ is a \emph{model for} $\Omc$, written $I \models \Omc$, if it satisfies all the axioms in $\Omc$. Whether the interpretation $I$ satisfies the axiom $\alpha$, written $I \models \alpha$, is given by
 \begin{align*}
   I \models C \sqsubseteq D &\iff C^I \subseteq D^I \enspace, &
@@ -91,7 +91,7 @@ where $\circ$ denotes the composition of relations, that is, $r \circ s = \{ \la
 An ontology $\Omc$ is \emph{consistent} if there exists a model $I \models \Omc$ for the ontology. An ontology that is not consistent is \emph{inconsistent}. A concept $C$ is \emph{satisfiable} in an ontology $\Omc$ if there exists a model $I \models \Omc$ in which $C^I \not= \emptyset$. An ontology in which all atomic concepts $C \in N_C$ are satisfiable is called \emph{coherent}. We say an axiom $\alpha$ is \emph{entailed by} the ontology $\Omc$, written $\Omc \models \alpha$, if and only if every model $I \models \Omc$ of the ontology satisfies $I \models \alpha$. 
 
 % describe subsumptions of concepts and roles
-Given two concepts $C$ and $D$ we say that $C$ is \emph{subsumed} by $D$ (or $D$ \emph{subsumes} $C$) with respect to the ontology $\Omc$, written $C \sqsubseteq_\Omc D$, if $C^I \subseteq D^I$ in every model $I$ of $\Omc$. Further, $C$ is \emph{strictly subsumed by} $D$, written $C \sqsubset_\Omc D$, if $C \sqsubseteq_\Omc D$ but not $D \sqsubseteq_\Omc C$. Analogously, given two roles $R$ and $S$, $R$ is subsumed by $S$ with respect to $\Omc$ ($R \sqsubseteq_\Omc S$) if $R^I \sqsubseteq S^I$ in all models $I$ of $\Omc$. Again, $R \sqsubset_\Omc S$ holds if $R \sqsubseteq_\Omc S$ but not $D \sqsubseteq_\Omc C$.
+Given two concepts $C$ and $D$ we say that $C$ is \emph{subsumed} by $D$ (or $D$ \emph{subsumes} $C$) with respect to the ontology $\Omc$, written $C \sqsubseteq_\Omc D$, if $C^I \subseteq D^I$ in every model $I$ of $\Omc$. Further, $C$ is \emph{strictly subsumed by} $D$, written $C \sqsubset_\Omc D$, if $C \sqsubseteq_\Omc D$ but not $D \sqsubseteq_\Omc C$. Analogously, given two roles $R$ and $S$, $R$ is subsumed by $S$ with respect to $\Omc$ (written $R \sqsubseteq_\Omc S$) if $R^I \sqsubseteq S^I$ in all models $I$ of $\Omc$. Again, $R \sqsubset_\Omc S$ holds if $R \sqsubseteq_\Omc S$ but not $S \sqsubseteq_\Omc R$.
 
 \subsection{The \ALC Description Logic}
 
