--- a/sections/b.main/3.theory/3.weakening.tex
+++ b/sections/b.main/3.theory/3.weakening.tex
@@ -1,5 +1,5 @@
 
-It follows now the extended definitions for the cover sets, refinement operators, and axiom weakening operator to \SROIQ concepts and axioms. This work builds on the approaches presented in \cite{confalonieri2020towards} and introduces further the weakening of RIAs as well as a separation between $\Omcref$ and $\Omcfull$. We begin by defining the upward and downward cover sets. These are now defined for both concepts and roles. The set of subconcepts is taken from $\Omcfull$ as opposed to $\Omcref$, as it is likely to contain more subconcepts, thus improving the granularity of the cover sets. Further, the cover sets for roles are computed over the set of simple roles in $\Omcfull$. Additionally, we define the upward and downward cover also for non-negative integers, as they will be useful for the refinement of cardinality constraints.
+It follows now the extended definitions for the cover sets, refinement operators, and axiom weakening operator covering \SROIQ concepts and axioms. This work builds on the approaches presented in \cite{confalonieri2020towards} and introduces further the weakening of RIAs as well as a separation between $\Omcref$ and $\Omcfull$. We begin by defining the upward and downward cover sets. These are now defined for both concepts and roles. The set of subconcepts is taken from $\Omcfull$ as opposed to $\Omcref$, as it is likely to contain more subconcepts, thus improving the granularity of the cover sets. Further, the cover sets for roles are computed over the set of simple roles in $\Omcfull$. Additionally, we define the upward and downward covers also for non-negative integers, as they will be useful for the refinement of cardinality constraints.
 
 \begin{definition} \label{def:covers}
   Let $\Omcfull$ and $\Omcref \subseteq \Omcfull$ be two \SROIQ ontologies that share the same vocabulary $N_C$, $N_R$, and $N_I$. The \emph{upward cover} and \emph{downward cover} for a concept $C$ are given by
@@ -21,7 +21,7 @@ It follows now the extended definitions for the cover sets, refinement operators
   The upward and downward covers for a non-negative integer $n$ are given by
   \begin{align*}
     \UpC_{\Omcref,\Omcfull}(n) &= \{ n, n + 1 \} \enspace, \\
-    \DownC_{\Omcref,\Omcfull}(R) &=
+    \DownC_{\Omcref,\Omcfull}(n) &=
     \begin{cases*}
       \{ n \} & \text{ if } $n = 0$ \\
       \{ n, n - 1 \} & \text{ if } $n > 0$
@@ -38,7 +38,7 @@ To also address some of these omissions, we define generalization and specializa
 
 \begin{definition}
   Let $\refine$ and $\corefine$ be two functions with domain $\Lmc(N_C, N_R, N_I) \cup \Lmc(N_C) \cup \mathbb{N}_0$. They map every concept to a finite subset of $\Lmc(N_C, N_R, N_I)$, every role to a subset of $\Lmc(N_C)$, and every non-negative integer to a finite subset of $\mathbb{N}_0$.
-  The \emph{abstract refinement operator} is defined recursively by induction on the structure of concepts, as follows.
+  The \emph{abstract refinement operator} is defined recursively on the structure of concepts, as follows.
   \begin{align*}
     \zeta_{\refine,\corefine}(A) ={} & \refine(A) \quad, A \in N_C \cup \{\top, \bot\} \enspace, \\
     \zeta_{\refine,\corefine}(\lnot C) ={} & \refine(\lnot C) \cup \{ \lnot C' \mid C' \in \zeta_{\corefine,\refine}(C) \} \enspace, \\
@@ -87,10 +87,10 @@ Revisiting the case in \Cref{exa:up-cover} we observe that $\gamma_{\Omc,\Omc}(C
   The upward and downward cover sets for concepts, roles, and integers are always finite. The number of roles is finite because the set of role names is finite. Since refinement of roles is equivalent to applying the upward or downward covers, the set of refinements must equally be finite. Similarly, the covers over concepts are limited to subconcepts, and since ontologies are finite sets of axioms, and all axioms have a finite size, there must be a finite number of subconcepts. We can show, by structural induction on concept expressions, that the result of the refinement operators must be a finite set for all concepts. This follows directly from the fact that the result is always the union of a constant number of finite sets.
 
   \item \ref{lem:generalisation}.\enspace \textbf{generalization and specialization:\enspace}
-  We first observe that by definition, if $X \in \UpC_{\Omcref,\Omcfull}(Y)$ then $Y \sqsubseteq_\Omcref X$ must hold. Likewise, it follows from the definition that if $X \in \DownC_{\Omcref,\Omcfull}(X)$ then $X \sqsubseteq_\Omcref Y$. For an integer $n$, the upward cover contains only values greater or equal to $n$, while the downward cover contains only values less or equal to $n$. We proceed with a proof by structural induction. We will show the proof for the generalization operator, the proof for the specialization operator can be approached analogously.
+  We first observe that by definition, if $X \in \UpC_{\Omcref,\Omcfull}(Y)$ then $Y \sqsubseteq_\Omcref X$ must hold. Likewise, it follows from the definition that if $X \in \DownC_{\Omcref,\Omcfull}(Y)$ then $X \sqsubseteq_\Omcref Y$. For an integer $n$, the upward cover contains only values greater or equal to $n$, while the downward cover contains only values less or equal to $n$. We proceed with a proof by structural induction. We will show the proof for the generalization operator, the proof for the specialization operator can be approached analogously.
   \begin{itemize}
     \item For $Y \in N_C \cup \Lmc(N_R) \cup \{ \nominal a \mid a \in N_I \} \cup \{ \top, \bot \}$ the generalization operator is equivalent to a simple application of the upwards cover and $Y \sqsubseteq_\Omcref X$ holds.
-    \item For $Y = \lnot C$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (\lnot C)^I$ that $\delta \not\in C^I$. By our inductive hypothesis, we know that $C' \sqsubseteq_\Omcref C$ holds for $C' \in \rho_{\Omcref,\Omcfull}(C)$. It follows that $\delta \not\in C'^I$ and therefore $\delta \in (\lnot C')^I$. We conclude that $(\lnot C)^I \subseteq (\lnot C')^I$ in every model $I$ of $\Omcref$ and consequently $\lnot C \sqsubseteq_\Omcref \lnot C'$.
+    \item For $Y = \lnot C$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (\lnot C)^I$ that $\delta \not\in C^I$. By our inductive hypothesis, we know that $C' \sqsubseteq_\Omcref C$ holds for $C' \in \rho_{\Omcref,\Omcfull}(C)$. It follows that $\delta \not\in C'^I$ and therefore $\delta \in (\lnot C')^I$. Therefore, $(\lnot C)^I \subseteq (\lnot C')^I$ in every model $I$ of $\Omcref$ and consequently $\lnot C \sqsubseteq_\Omcref \lnot C'$.
     \item For $Y = C \sqcap D$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (C \sqcap D)^I$ that $\delta \in C^I$ and $\delta \in D^I$. By our inductive hypothesis, we know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $D \sqsubseteq_\Omcref D'$ for $D' \in \gamma_{\Omcref,\Omcfull}(D)$. It follows that $\delta \in C'^I$ and $\delta \in D'^I$, therefore $\delta \in (C' \sqcap D)^I$ and $\delta \in (C \sqcap D')^I$. We conclude that $(C \sqcap D)^I \subseteq (C' \sqcap D)^I$ and $(C \sqcap D)^I \subseteq (C \sqcap D')^I$ in every model $I$ of $\Omcref$ and consequently $C \sqcap D \sqsubseteq_\Omcref C' \sqcap D$ and $C \sqcap D \sqsubseteq_\Omcref C \sqcap D'$.
     \item For $Y = C \sqcup D$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (C \sqcup D)^I$ that $\delta \in C^I \cup D^I$. By our inductive hypothesis, we know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $D \sqsubseteq_\Omcref D'$ for $D' \in \gamma_{\Omcref,\Omcfull}(D)$. It follows that $\delta \in C'^I \cup D^I$ and $\delta \in C^I \cup D'^I$, therefore $\delta \in (C' \sqcup D)^I$ and $\delta \in (C \sqcup D')^I$. We conclude that $(C \sqcup D)^I \subseteq (C' \sqcup D)^I$ and $(C \sqcup D)^I \subseteq (C \sqcup D')^I$ in every model $I$ of $\Omcref$ and consequently, $C \sqcup D \sqsubseteq_\Omcref C' \sqcup D$ and $C \sqcup D \sqsubseteq_\Omcref C \sqcup D'$.
     \item For $Y = \forall R.C$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (\forall R.C)^I$ that for all $\delta'$ such that $\langle \delta, \delta' \rangle \in R^I$, $\delta' \in C^I$. By our inductive hypothesis, we know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $R' \sqsubseteq_\Omcref R$ for $R' \in \rho_{\Omcref,\Omcfull}(R)$. It follows that $R'^I \subseteq R^I$, so there are no new candidates for $\delta'$. We further know that for all elements $\delta' \in C^I$, $\delta' \in C'^I$. We conclude that $\delta \in (\forall R'.C)^I$ and $\delta \in (\forall R.C')^I$. Therefore, $\forall R.C \sqsubseteq_\Omcref \forall R'.C$ and $\forall R.C \sqsubseteq_\Omcref \forall R.C'$.
@@ -142,7 +142,7 @@ As was the case for the axiom weakening operator in \ALC, the axioms $\alpha'$ r
   \end{itemize}
 \end{proof}
 
-Clearly, replacing an axiom in the full ontology with a weakening cannot reduce the number of models of the ontology. However, for weakening to be useful in practice, we must additionally show that adding the weakened axioms to the ontology will not violate any of the global constraints that ensure the decidability of \SROIQ. To do this, we show first that all roles that are simple in $\Omcfull$ are also simple in the ontology obtained by adding the weakened axioms.
+Clearly, replacing an axiom in an ontology with one of its weakenings cannot reduce the number of models of the ontology. However, for weakening to be useful in practice, we must additionally show that adding the weakened axioms to the ontology will not violate any of the global constraints that ensure the decidability of \SROIQ. To do this, we show first that all roles that are simple in $\Omcfull$ are also simple in the ontology obtained by adding the weakened axioms.
 
 \begin{lemma} \label{lem:simple-roles}
   Let $\Omc$ be an ontology such that all simple roles of $\Omcfull$ are also simple in $\Omc$. For every axiom $\alpha \in \Omc$ and role $R$, if $\alpha' \in g_{\Omcref,\Omcfull}(\alpha)$ and $R$ simple in $\Omc$, then $R$ is simple in $\Omc \cup \{ \alpha' \}$.
