--- a/sections/b.main/6.conclution.tex
+++ b/sections/b.main/6.conclution.tex
@@ -1,5 +1,5 @@
 
-This thesis has proposed refinement operators and an axiom weakening operator for all aspects of \SROIQ and shown that for repairs of inconsistent ontologies, weakening can, in some cases, significantly outperform removal. The proposed approaches have been implemented both for performing the empirical evaluation and in a Protégé plugin that allows users to use the techniques described in this thesis for manually weakening axioms and automatically repairing ontologies. Some ideas implemented for and discussed in the thesis, like the repair approaches focusing on finding better repairs discussed in \cref{best-repair-impl} or the relaxed RIA weakening mentioned in \cref{rbox-alternative}, have not yet been thoroughly studied and still have to be evaluated.
+This thesis has proposed refinement operators and an axiom weakening operator covering all aspects of \SROIQ and shown that for the repair of inconsistent ontologies, weakening can, in some cases, significantly outperform removal. The proposed approaches have been implemented both for performing the empirical evaluation and in a Protégé plugin that allows users to use the techniques described in this thesis for manually weakening axioms and automatically repairing ontologies. Some ideas implemented for and discussed in the thesis, like the repair approaches focusing on finding better repairs discussed in \cref{best-repair-impl} or the relaxed RIA weakening mentioned in \cref{rbox-alternative}, have not yet been thoroughly studied and still have to be evaluated.
 
-Better ways for users to interact with and guide the repair process may also be studied. It can also be seen that the repair algorithm likely needs better heuristics to steer the selection of bad and weakened axioms to result in better repairs. This may also involve the use of domain-specific information and heuristics that could guide the repair process to choose repairs that also make sense from a modelling perspective. The termination of the proposed repair algorithm should be studied, as has been done in \cite{confalonieri2020towards}. Further additions to the refinement operators may also be studied in more detail, e.g., using non-simple roles in the upward and downward covers in certain contexts. Relaxing the allowed weakening for RIAs may also be considered, and to cover also extensions to regularity conditions such as those studied in \cite{DBLP:conf/cade/Kazakov10}. Future work could further focus on finding robust measures for comparing the quality of repairs. Different applications for the axiom weakening and refinement operators, like those studied for concept combination in \cite{righetti2022asymmetric}, are now also able to be explored using more expressive DLs.
+Better ways for users to interact with and guide the repair process may also be studied. It can also be seen that the repair algorithm likely needs better heuristics to steer the selection of bad and weakened axioms to achieve better repairs. This may also involve the use of domain-specific information and heuristics that could guide the repair process to choose repairs that also make sense from a modelling perspective. The termination of the proposed repair algorithm still needs to be studied, as has been done in \cite{confalonieri2020towards}. Further additions to the refinement operators may also be studied in more detail, e.g., using non-simple roles in the upward and downward covers in certain contexts. Relaxing the allowed weakening for RIAs may also be considered, and to cover also extensions to regularity conditions such as those studied in \cite{DBLP:conf/cade/Kazakov10}. Future work could further focus on finding robust measures for comparing the quality of repairs. Different applications for the axiom weakening and refinement operators, like those studied for concept combination in \cite{righetti2022asymmetric}, are now also able to be explored using more expressive DLs.
 
